# SoundCanvas

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  FULL_PIPELINE_IMPLEMENTATION.md  Makefile  PHASE10_AWS_DEPLOYMENT.md  PHASE10_FRONTEND_COMPLETE.md  PHASE10_PERSON_A_IMPLEMENTATION.md  PHASE10_PERSON_B_IMPLEMENTATION.md  PHASE10_QUICKSTART.md  PHASE9_PERSON_A_IMPLEMENTATION.md  PHASE9_TESTING_GUIDE.md  PHASE_7_PERSON_B_IMPLEMENTATION.md  PHASE_8_TEST_RESULTS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  fix.txt  freesound.json
audio-producer/: Dockerfile  README.md  app.py  audio_validation.py  drum_sampler.py  (+5 more)
cpp-core/: CMakeLists.txt  Dockerfile  PHASE8_REPORT.md  PHASE_6_PERSON_A_COMPLETE.md  README.md  test_phase7.sh
cpp-core/assets/ambience/: README.md
cpp-core/examples/: image_00100.mid  image_00200.mid  image_00300.mid  test_song.mid
cpp-core/include/: AudioEngine.hpp  AudioProducerClient.hpp  AudioRendererClient.hpp  Composer.hpp  GenreTemplate.hpp  HttpServer.hpp  ImageFeatures.hpp  MidiWriter.hpp  ModelClient.hpp  MusicMapping.hpp  MusicalStyle.hpp  PatternTransform.hpp  SectionPlanner.hpp  SongSpec.hpp
cpp-core/scripts/: generate_ambience_samples.sh
cpp-core/src/: AudioEngine.cpp  AudioProducerClient.cpp  AudioRendererClient.cpp  Composer.cpp  GenreTemplate.cpp  HttpServer.cpp  ImageFeatures.cpp  MidiWriter.cpp  ModelClient.cpp  MusicMapping.cpp  MusicalStyle.cpp  PatternTransform.cpp  SectionPlanner.cpp  SongSpec.cpp  main.cpp
cpp-core/tests/: test_AudioEngine.cpp  test_ImageFeatures.cpp  test_ModelClient.cpp  test_composition_sanity.cpp
(+113 files in other folders)
